--- a/clientNative/package.json
+++ b/clientNative/package.json
@@ -2,6 +2,7 @@
   "name": "clientnative",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
+  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,6 +11,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "^17.0.1",
