--- a/clientNative/package.json
+++ b/clientNative/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "expo": "~44.0.0",
+    "expo-cli": "^5.0.3",
     "expo-status-bar": "~1.2.0",
     "react": "^17.0.1",
     "react-dom": "17.0.1",
